Manifests/05-appointment-service.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: appointment-service
    namespace: medapp
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: appointment-service
    template:
      metadata:
        labels:
          app: appointment-service
      spec:
        containers:
          - name: appointment-service
            image: r0jek/appointment-service:1.0.0
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 8082
            resources:
              limits:
                memory: "512Mi"
                cpu: "500m"
              requests:
                memory: "384Mi"
                cpu: "250m"
            livenessProbe:
              httpGet:
                path: /actuator/health
                port: 8082
              initialDelaySeconds: 40
              periodSeconds: 15
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: 8082
              initialDelaySeconds: 30
              periodSeconds: 10

---
  apiVersion: v1
  kind: Service
  metadata:
    name: appointment-service
    namespace: medapp
  spec:
    ports:
      - port: 8082
        targetPort: 8082
    selector:
      app: appointment-service
    type: ClusterIP
