Manifests/06-booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: medapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: r0jek/booking-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "384Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: medapp
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: booking-service
  type: ClusterIP
